fix: 로직 업로드