@@ -7,6 +7,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 @Configuration
@@ -15,10 +16,11 @@ public class CorsConfig {
     CorsConfigurationSource corsConfigurationSource(){
         CorsConfiguration corsConfiguration = new CorsConfiguration();
         corsConfiguration.setAllowedOrigins(Arrays.asList("https://fitting-pair.vercel.app","https://localhost:5173"));
-        corsConfiguration.setAllowedMethods(Arrays.asList("GET","POST","OPTIONS","DELETE","PUT"));
+        corsConfiguration.setAllowedMethods(Collections.singletonList("*")); //모든 요청 메서드를 허용
         corsConfiguration.setAllowCredentials(true);
-        corsConfiguration.setAllowedHeaders(List.of("*"));
+        corsConfiguration.setAllowedHeaders(Arrays.asList("Authorization","Refresh","Content-Type"));
         corsConfiguration.setMaxAge(3600L);
+        corsConfiguration.setExposedHeaders(Arrays.asList("Authorization","Refresh"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**",corsConfiguration);
         return source;
